crates/pg_syntax/tests/snapshots/postgres_regress/horology@272.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_date('2011x 12x 18', 'YYYYxMMxDD');"
---
SelectStmt@0..45
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..43
    FuncCall@7..43
      Ident@7..14 "to_date"
      Ascii40@14..15 "("
      AConst@15..29
        Sconst@15..29 "'2011x 12x 18'"
      Ascii44@29..30 ","
      Whitespace@30..31 " "
      AConst@31..43
        Sconst@31..43 "'YYYYxMMxDD'"
  Ascii41@43..44 ")"
  Ascii59@44..45 ";"

