crates/pg_syntax/tests/snapshots/postgres_regress/horology@278.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('Fri 1-January-1999', 'DY DD MON YYYY');"
---
SelectStmt@0..60
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..58
    FuncCall@7..58
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..40
        Sconst@20..40 "'Fri 1-January-1999'"
      Ascii44@40..41 ","
      Whitespace@41..42 " "
      AConst@42..58
        Sconst@42..58 "'DY DD MON YYYY'"
  Ascii41@58..59 ")"
  Ascii59@59..60 ";"

