crates/pg_syntax/tests/snapshots/postgres_regress/horology@279.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('Fri 1-Jan-1999', 'DY DD MON YYYY');"
---
SelectStmt@0..56
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..54
    FuncCall@7..54
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..36
        Sconst@20..36 "'Fri 1-Jan-1999'"
      Ascii44@36..37 ","
      Whitespace@37..38 " "
      AConst@38..54
        Sconst@38..54 "'DY DD MON YYYY'"
  Ascii41@54..55 ")"
  Ascii59@55..56 ";"

