crates/pg_syntax/tests/snapshots/postgres_regress/horology@289.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2016-02-30 15:50:55', 'YYYY-MM-DD HH24:MI:SS');"
---
SelectStmt@0..68
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..66
    FuncCall@7..66
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..41
        Sconst@20..41 "'2016-02-30 15:50:55'"
      Ascii44@41..42 ","
      Whitespace@42..43 " "
      AConst@43..66
        Sconst@43..66 "'YYYY-MM-DD HH24:MI:SS'"
  Ascii41@66..67 ")"
  Ascii59@67..68 ";"

