crates/pg_syntax/tests/snapshots/postgres_regress/horology@292.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT to_timestamp('2015-02-11 86000', 'YYYY-MM-DD SSSS');"
---
SelectStmt@0..59
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..57
    FuncCall@7..57
      Ident@7..19 "to_timestamp"
      Ascii40@19..20 "("
      AConst@20..38
        Sconst@20..38 "'2015-02-11 86000'"
      Ascii44@38..39 ","
      Whitespace@39..40 " "
      AConst@40..57
        Sconst@40..57 "'YYYY-MM-DD SSSS'"
  Ascii41@57..58 ")"
  Ascii59@58..59 ";"

